tests/sources/invalid/generics/generics_errors.fire
// Generic type errors

// Using undefined type parameter
fn use_undefined_type() -> void {
    T x;  // T is not defined  //~ ERROR FS-PARSE-0010 @5
//~^ ERROR FS-PARSE-0010 @7
}

// Generic function with wrong type argument
fn identity<T>(value: T) -> T {
    return value;
}

fn wrong_type_inference() -> void {
    x: int32 = identity<string>(42);  // Type mismatch: expects string but got int  //~ ERROR FS-SEM-0002 @5
}

// Constraint violation
fn add<T: Numeric>(a: T, b: T) -> T {
    return a + b;
}

fn violate_constraint() -> void {
    result: string = add<string>("hello", "world");  // string doesn't satisfy Numeric
}

// Missing type parameter
fn missing_type_param() -> void {
    identity(5);  // May require explicit type parameter
}

// Too many type parameters
fn too_many_type_params() -> void {
    x: int32 = identity<int32, string>(5);  // identity only takes one type parameter  //~ ERROR FS-SEM-0010 @16
}

// Generic class field type error
class Box<T> {
    value: T;
}

fn generic_class_error() -> void {
    box: Box<int32>;  //~ ERROR FS-PARSE-0010 @20
    box.value = "string";  // Type mismatch: value is int32, not string  //~ ERROR FS-PARSE-0003 @5
}
